QtBeef/src/Qt/qtextlayout.bf

using System;
using System.Interop;

namespace Qt6;

// --------------------------------------------------------------
// QTextInlineObject
// --------------------------------------------------------------
[CRepr]
struct QTextInlineObject_Ptr: void
{
}
extension CQt
{
	[LinkName("QTextInlineObject_new")]
	public static extern QTextInlineObject_Ptr* QTextInlineObject_new(QTextInlineObject_Ptr* other);
	[LinkName("QTextInlineObject_new2")]
	public static extern QTextInlineObject_Ptr* QTextInlineObject_new2(QTextInlineObject_Ptr* other);
	[LinkName("QTextInlineObject_new3")]
	public static extern QTextInlineObject_Ptr* QTextInlineObject_new3();
	[LinkName("QTextInlineObject_Delete")]
	public static extern void QTextInlineObject_Delete(QTextInlineObject_Ptr* self);
	[LinkName("QTextInlineObject_IsValid")]
	public static extern bool QTextInlineObject_IsValid(QTextInlineObject_Ptr* self);
	[LinkName("QTextInlineObject_Rect")]
	public static extern QRectF_Ptr* QTextInlineObject_Rect(QTextInlineObject_Ptr* self);
	[LinkName("QTextInlineObject_Width")]
	public static extern double QTextInlineObject_Width(QTextInlineObject_Ptr* self);
	[LinkName("QTextInlineObject_Ascent")]
	public static extern double QTextInlineObject_Ascent(QTextInlineObject_Ptr* self);
	[LinkName("QTextInlineObject_Descent")]
	public static extern double QTextInlineObject_Descent(QTextInlineObject_Ptr* self);
	[LinkName("QTextInlineObject_Height")]
	public static extern double QTextInlineObject_Height(QTextInlineObject_Ptr* self);
	[LinkName("QTextInlineObject_TextDirection")]
	public static extern Qt_LayoutDirection QTextInlineObject_TextDirection(QTextInlineObject_Ptr* self);
	[LinkName("QTextInlineObject_SetWidth")]
	public static extern void QTextInlineObject_SetWidth(QTextInlineObject_Ptr* self, double w);
	[LinkName("QTextInlineObject_SetAscent")]
	public static extern void QTextInlineObject_SetAscent(QTextInlineObject_Ptr* self, double a);
	[LinkName("QTextInlineObject_SetDescent")]
	public static extern void QTextInlineObject_SetDescent(QTextInlineObject_Ptr* self, double d);
	[LinkName("QTextInlineObject_TextPosition")]
	public static extern c_int QTextInlineObject_TextPosition(QTextInlineObject_Ptr* self);
	[LinkName("QTextInlineObject_FormatIndex")]
	public static extern c_int QTextInlineObject_FormatIndex(QTextInlineObject_Ptr* self);
	[LinkName("QTextInlineObject_Format")]
	public static extern QTextFormat_Ptr* QTextInlineObject_Format(QTextInlineObject_Ptr* self);
}
class QTextInlineObject : IQTextInlineObject
{
	private QTextInlineObject_Ptr* ptr;
	public void* ObjectPtr => ptr;
	public this(IQTextInlineObject other)
	{
		this.ptr = CQt.QTextInlineObject_new((.)other?.ObjectPtr);
	}
	public this()
	{
		this.ptr = CQt.QTextInlineObject_new3();
	}
	public ~this()
	{
		CQt.QTextInlineObject_Delete(this.ptr);
	}
	public bool IsValid()
	{
		return CQt.QTextInlineObject_IsValid((.)this.ptr);
	}
	public QRectF_Ptr* Rect()
	{
		return CQt.QTextInlineObject_Rect((.)this.ptr);
	}
	public double Width()
	{
		return CQt.QTextInlineObject_Width((.)this.ptr);
	}
	public double Ascent()
	{
		return CQt.QTextInlineObject_Ascent((.)this.ptr);
	}
	public double Descent()
	{
		return CQt.QTextInlineObject_Descent((.)this.ptr);
	}
	public double Height()
	{
		return CQt.QTextInlineObject_Height((.)this.ptr);
	}
	public Qt_LayoutDirection TextDirection()
	{
		return CQt.QTextInlineObject_TextDirection((.)this.ptr);
	}
	public void SetWidth(double w)
	{
		CQt.QTextInlineObject_SetWidth((.)this.ptr, w);
	}
	public void SetAscent(double a)
	{
		CQt.QTextInlineObject_SetAscent((.)this.ptr, a);
	}
	public void SetDescent(double d)
	{
		CQt.QTextInlineObject_SetDescent((.)this.ptr, d);
	}
	public c_int TextPosition()
	{
		return CQt.QTextInlineObject_TextPosition((.)this.ptr);
	}
	public c_int FormatIndex()
	{
		return CQt.QTextInlineObject_FormatIndex((.)this.ptr);
	}
	public QTextFormat_Ptr* Format()
	{
		return CQt.QTextInlineObject_Format((.)this.ptr);
	}
}
interface IQTextInlineObject : IQtObjectInterface
{
}
// --------------------------------------------------------------
// QTextLayout
// --------------------------------------------------------------
[CRepr]
struct QTextLayout_Ptr: void
{
}
extension CQt
{
	[LinkName("QTextLayout_new")]
	public static extern QTextLayout_Ptr* QTextLayout_new();
	[LinkName("QTextLayout_new2")]
	public static extern QTextLayout_Ptr* QTextLayout_new2(libqt_string text);
	[LinkName("QTextLayout_new3")]
	public static extern QTextLayout_Ptr* QTextLayout_new3(libqt_string text, QFont_Ptr* font);
	[LinkName("QTextLayout_new4")]
	public static extern QTextLayout_Ptr* QTextLayout_new4(QTextBlock_Ptr* b);
	[LinkName("QTextLayout_new5")]
	public static extern QTextLayout_Ptr* QTextLayout_new5(libqt_string text, QFont_Ptr* font, QPaintDevice_Ptr** paintdevice);
	[LinkName("QTextLayout_Delete")]
	public static extern void QTextLayout_Delete(QTextLayout_Ptr* self);
	[LinkName("QTextLayout_SetFont")]
	public static extern void QTextLayout_SetFont(QTextLayout_Ptr* self, QFont_Ptr* f);
	[LinkName("QTextLayout_Font")]
	public static extern QFont_Ptr* QTextLayout_Font(QTextLayout_Ptr* self);
	[LinkName("QTextLayout_SetRawFont")]
	public static extern void QTextLayout_SetRawFont(QTextLayout_Ptr* self, QRawFont_Ptr* rawFont);
	[LinkName("QTextLayout_SetText")]
	public static extern void QTextLayout_SetText(QTextLayout_Ptr* self, libqt_string stringVal);
	[LinkName("QTextLayout_Text")]
	public static extern libqt_string QTextLayout_Text(QTextLayout_Ptr* self);
	[LinkName("QTextLayout_SetTextOption")]
	public static extern void QTextLayout_SetTextOption(QTextLayout_Ptr* self, QTextOption_Ptr* option);
	[LinkName("QTextLayout_TextOption")]
	public static extern QTextOption_Ptr* QTextLayout_TextOption(QTextLayout_Ptr* self);
	[LinkName("QTextLayout_SetPreeditArea")]
	public static extern void QTextLayout_SetPreeditArea(QTextLayout_Ptr* self, c_int position, libqt_string text);
	[LinkName("QTextLayout_PreeditAreaPosition")]
	public static extern c_int QTextLayout_PreeditAreaPosition(QTextLayout_Ptr* self);
	[LinkName("QTextLayout_PreeditAreaText")]
	public static extern libqt_string QTextLayout_PreeditAreaText(QTextLayout_Ptr* self);
	[LinkName("QTextLayout_SetFormats")]
	public static extern void QTextLayout_SetFormats(QTextLayout_Ptr* self, void** overrides);
	[LinkName("QTextLayout_Formats")]
	public static extern void* QTextLayout_Formats(QTextLayout_Ptr* self);
	[LinkName("QTextLayout_ClearFormats")]
	public static extern void QTextLayout_ClearFormats(QTextLayout_Ptr* self);
	[LinkName("QTextLayout_SetCacheEnabled")]
	public static extern void QTextLayout_SetCacheEnabled(QTextLayout_Ptr* self, bool enable);
	[LinkName("QTextLayout_CacheEnabled")]
	public static extern bool QTextLayout_CacheEnabled(QTextLayout_Ptr* self);
	[LinkName("QTextLayout_SetCursorMoveStyle")]
	public static extern void QTextLayout_SetCursorMoveStyle(QTextLayout_Ptr* self, Qt_CursorMoveStyle style);
	[LinkName("QTextLayout_CursorMoveStyle")]
	public static extern Qt_CursorMoveStyle QTextLayout_CursorMoveStyle(QTextLayout_Ptr* self);
	[LinkName("QTextLayout_BeginLayout")]
	public static extern void QTextLayout_BeginLayout(QTextLayout_Ptr* self);
	[LinkName("QTextLayout_EndLayout")]
	public static extern void QTextLayout_EndLayout(QTextLayout_Ptr* self);
	[LinkName("QTextLayout_ClearLayout")]
	public static extern void QTextLayout_ClearLayout(QTextLayout_Ptr* self);
	[LinkName("QTextLayout_CreateLine")]
	public static extern QTextLine_Ptr* QTextLayout_CreateLine(QTextLayout_Ptr* self);
	[LinkName("QTextLayout_LineCount")]
	public static extern c_int QTextLayout_LineCount(QTextLayout_Ptr* self);
	[LinkName("QTextLayout_LineAt")]
	public static extern QTextLine_Ptr* QTextLayout_LineAt(QTextLayout_Ptr* self, c_int i);
	[LinkName("QTextLayout_LineForTextPosition")]
	public static extern QTextLine_Ptr* QTextLayout_LineForTextPosition(QTextLayout_Ptr* self, c_int pos);
	[LinkName("QTextLayout_IsValidCursorPosition")]
	public static extern bool QTextLayout_IsValidCursorPosition(QTextLayout_Ptr* self, c_int pos);
	[LinkName("QTextLayout_NextCursorPosition")]
	public static extern c_int QTextLayout_NextCursorPosition(QTextLayout_Ptr* self, c_int oldPos);
	[LinkName("QTextLayout_PreviousCursorPosition")]
	public static extern c_int QTextLayout_PreviousCursorPosition(QTextLayout_Ptr* self, c_int oldPos);
	[LinkName("QTextLayout_LeftCursorPosition")]
	public static extern c_int QTextLayout_LeftCursorPosition(QTextLayout_Ptr* self, c_int oldPos);
	[LinkName("QTextLayout_RightCursorPosition")]
	public static extern c_int QTextLayout_RightCursorPosition(QTextLayout_Ptr* self, c_int oldPos);
	[LinkName("QTextLayout_Draw")]
	public static extern void QTextLayout_Draw(QTextLayout_Ptr* self, QPainter_Ptr** p, QPointF_Ptr* pos);
	[LinkName("QTextLayout_DrawCursor")]
	public static extern void QTextLayout_DrawCursor(QTextLayout_Ptr* self, QPainter_Ptr** p, QPointF_Ptr* pos, c_int cursorPosition);
	[LinkName("QTextLayout_DrawCursor2")]
	public static extern void QTextLayout_DrawCursor2(QTextLayout_Ptr* self, QPainter_Ptr** p, QPointF_Ptr* pos, c_int cursorPosition, c_int width);
	[LinkName("QTextLayout_Position")]
	public static extern QPointF_Ptr* QTextLayout_Position(QTextLayout_Ptr* self);
	[LinkName("QTextLayout_SetPosition")]
	public static extern void QTextLayout_SetPosition(QTextLayout_Ptr* self, QPointF_Ptr* p);
	[LinkName("QTextLayout_BoundingRect")]
	public static extern QRectF_Ptr* QTextLayout_BoundingRect(QTextLayout_Ptr* self);
	[LinkName("QTextLayout_MinimumWidth")]
	public static extern double QTextLayout_MinimumWidth(QTextLayout_Ptr* self);
	[LinkName("QTextLayout_MaximumWidth")]
	public static extern double QTextLayout_MaximumWidth(QTextLayout_Ptr* self);
	[LinkName("QTextLayout_GlyphRuns")]
	public static extern void* QTextLayout_GlyphRuns(QTextLayout_Ptr* self);
	[LinkName("QTextLayout_SetFlags")]
	public static extern void QTextLayout_SetFlags(QTextLayout_Ptr* self, c_int flags);
	[LinkName("QTextLayout_NextCursorPosition2")]
	public static extern c_int QTextLayout_NextCursorPosition2(QTextLayout_Ptr* self, c_int oldPos, QTextLayout_CursorMode mode);
	[LinkName("QTextLayout_PreviousCursorPosition2")]
	public static extern c_int QTextLayout_PreviousCursorPosition2(QTextLayout_Ptr* self, c_int oldPos, QTextLayout_CursorMode mode);
	[LinkName("QTextLayout_Draw3")]
	public static extern void QTextLayout_Draw3(QTextLayout_Ptr* self, QPainter_Ptr** p, QPointF_Ptr* pos, void** selections);
	[LinkName("QTextLayout_Draw4")]
	public static extern void QTextLayout_Draw4(QTextLayout_Ptr* self, QPainter_Ptr** p, QPointF_Ptr* pos, void** selections, QRectF_Ptr* clip);
	[LinkName("QTextLayout_GlyphRuns1")]
	public static extern void* QTextLayout_GlyphRuns1(QTextLayout_Ptr* self, c_int from);
	[LinkName("QTextLayout_GlyphRuns2")]
	public static extern void* QTextLayout_GlyphRuns2(QTextLayout_Ptr* self, c_int from, c_int length);
}
